--- a/public/assets/css/4kqemjz6wnrwxht8otc1zstb5.css
+++ b/public/assets/css/4kqemjz6wnrwxht8otc1zstb5.css
@@ -1,8 +1,8 @@
 :root {
-  --tenor-gif-logo: url(/assets/svg/d2kkhofmuuxleioyci47pssdd.svg);
+  --tenor-gif-logo: url(/assets/svg/d2kkhofmuuxleioyci47pssdd.svg.svg.svg);
 }
 .theme--dark {
-  --tenor-gif-logo: url(/assets/svg/4ug4kljhcojrav5cwfgdoypp1.svg);
+  --tenor-gif-logo: url(/assets/svg/4ug4kljhcojrav5cwfgdoypp1.svg.svg.svg);
 }
 .tenor-gif__search-popover {
   position: absolute;
