--- a/public/assets/css/ev3prx6qwul6j3me07vap4ui1.css
+++ b/public/assets/css/ev3prx6qwul6j3me07vap4ui1.css
@@ -1142,97 +1142,97 @@
   --illustration-microspot-size-large: 6.4rem;
   --illustration-spot-size-small: 12.8rem;
   --illustration-spot-size-large: 25.6rem;
-  --background-icons: url(/assets/svg/cwn0a0e7hog2i33c88ucrvot5.svg.svg);
-  --entity-background-company: url(/assets/svg/$1.svg.svg.svg);
-  --entity-background-event: url(/assets/svg/$1.svg.svg.svg);
-  --entity-background-group: url(/assets/svg/$1.svg.svg.svg);
-  --entity-background-hashtag: url(/assets/svg/$1.svg.svg.svg);
-  --entity-background-person: url(/assets/svg/$1.svg.svg.svg);
-  --entity-background-product: url(/assets/svg/$1.svg.svg.svg);
-  --entity-background-publication: url(/assets/svg/$1.svg.svg.svg);
-  --entity-background-school: url(/assets/svg/$1.svg.svg.svg);
-  --entity-background-service: url(/assets/svg/$1.svg.svg.svg);
-  --entity-ghost-company-accent-1: url(/assets/svg/$1.svg.svg.svg);
-  --entity-ghost-company-accent-4: url(/assets/svg/$1.svg.svg.svg);
-  --entity-ghost-event-accent-4: url(/assets/svg/$1.svg.svg.svg);
-  --entity-ghost-group-accent-4: url(/assets/svg/$1.svg.svg.svg);
-  --entity-ghost-hashtag-accent-4: url(/assets/svg/$1.svg.svg.svg);
-  --entity-ghost-person-accent-4: url(/assets/svg/$1.svg.svg.svg);
-  --entity-ghost-product-accent-4: url(/assets/svg/$1.svg.svg.svg);
-  --entity-ghost-publication-accent-4: url(/assets/svg/$1.svg.svg.svg);
-  --entity-ghost-school-accent-4: url(/assets/svg/$1.svg.svg.svg);
-  --entity-ghost-service-accent-4: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-hashtag-small: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-hashtag-large: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-lightbulb-small: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-lightbulb-large: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-document-small: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-document-large: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-document-report-small: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-document-report-large: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-document-comment-small: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-document-comment-large: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-document-folder-small: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-document-folder-large: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-industry-small: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-industry-large: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-search-small: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-search-large: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-messages-small: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-messages-large: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-folder-small: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-notebook-large: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-signal-success-small: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-signal-success-large: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-signal-caution-small: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-signal-caution-large: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-signal-error-small: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-signal-error-large: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-company-small: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-company-large: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-camera-small: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-camera-large: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-globe-small: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-globe-large: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-magnet-small: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-magnet-large: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-rocket-small: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-rocket-large: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-trophy-small: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-trophy-large: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-location-marker-small: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-location-marker-large: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-salary-small: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-salary-large: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-pencil-ruler-small: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-pencil-ruler-large: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-megaphone-small: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-megaphone-large: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-school-small: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-school-large: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-video-small: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-video-large: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-video-course-small: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-video-course-large: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-dashboard-small: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-dashboard-large: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-briefcase-jobs-small: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-briefcase-jobs-large: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-mail-small: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-mail-large: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-mail-open-small: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-mail-open-large: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-article-small: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-article-large: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-article-stack-small: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-article-stack-large: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-award-small: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-award-large: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-calendar-small: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-calendar-large: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-compass-small: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-compass-large: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-glasses-small: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-glasses-large: url(/assets/svg/$1.svg.svg.svg);
-  --illustration-microspot-gift-small: url(/assets/svg/$1.svg.svg.svg);
+  --background-icons: url(../svg/a.svg);
+  --entity-background-company: url(../svg/a.svg);
+  --entity-background-event: url(../svg/a.svg);
+  --entity-background-group: url(../svg/a.svg);
+  --entity-background-hashtag: url(../svg/a.svg);
+  --entity-background-person: url(../svg/a.svg);
+  --entity-background-product: url(../svg/a.svg);
+  --entity-background-publication: url(../svg/a.svg);
+  --entity-background-school: url(../svg/a.svg);
+  --entity-background-service: url(../svg/a.svg);
+  --entity-ghost-company-accent-1: url(../svg/a.svg);
+  --entity-ghost-company-accent-4: url(../svg/a.svg);
+  --entity-ghost-event-accent-4: url(../svg/a.svg);
+  --entity-ghost-group-accent-4: url(../svg/a.svg);
+  --entity-ghost-hashtag-accent-4: url(../svg/a.svg);
+  --entity-ghost-person-accent-4: url(../svg/a.svg);
+  --entity-ghost-product-accent-4: url(../svg/a.svg);
+  --entity-ghost-publication-accent-4: url(../svg/a.svg);
+  --entity-ghost-school-accent-4: url(../svg/a.svg);
+  --entity-ghost-service-accent-4: url(../svg/a.svg);
+  --illustration-microspot-hashtag-small: url(../svg/a.svg);
+  --illustration-microspot-hashtag-large: url(../svg/a.svg);
+  --illustration-microspot-lightbulb-small: url(../svg/a.svg);
+  --illustration-microspot-lightbulb-large: url(../svg/a.svg);
+  --illustration-microspot-document-small: url(../svg/a.svg);
+  --illustration-microspot-document-large: url(../svg/a.svg);
+  --illustration-microspot-document-report-small: url(../svg/a.svg);
+  --illustration-microspot-document-report-large: url(../svg/a.svg);
+  --illustration-microspot-document-comment-small: url(../svg/a.svg);
+  --illustration-microspot-document-comment-large: url(../svg/a.svg);
+  --illustration-microspot-document-folder-small: url(../svg/a.svg);
+  --illustration-microspot-document-folder-large: url(../svg/a.svg);
+  --illustration-microspot-industry-small: url(../svg/a.svg);
+  --illustration-microspot-industry-large: url(../svg/a.svg);
+  --illustration-microspot-search-small: url(../svg/a.svg);
+  --illustration-microspot-search-large: url(../svg/a.svg);
+  --illustration-microspot-messages-small: url(../svg/a.svg);
+  --illustration-microspot-messages-large: url(../svg/a.svg);
+  --illustration-microspot-folder-small: url(../svg/a.svg);
+  --illustration-microspot-notebook-large: url(../svg/a.svg);
+  --illustration-microspot-signal-success-small: url(../svg/a.svg);
+  --illustration-microspot-signal-success-large: url(../svg/a.svg);
+  --illustration-microspot-signal-caution-small: url(../svg/a.svg);
+  --illustration-microspot-signal-caution-large: url(../svg/a.svg);
+  --illustration-microspot-signal-error-small: url(../svg/a.svg);
+  --illustration-microspot-signal-error-large: url(../svg/a.svg);
+  --illustration-microspot-company-small: url(../svg/a.svg);
+  --illustration-microspot-company-large: url(../svg/a.svg);
+  --illustration-microspot-camera-small: url(../svg/a.svg);
+  --illustration-microspot-camera-large: url(../svg/a.svg);
+  --illustration-microspot-globe-small: url(../svg/a.svg);
+  --illustration-microspot-globe-large: url(../svg/a.svg);
+  --illustration-microspot-magnet-small: url(../svg/a.svg);
+  --illustration-microspot-magnet-large: url(../svg/a.svg);
+  --illustration-microspot-rocket-small: url(../svg/a.svg);
+  --illustration-microspot-rocket-large: url(../svg/a.svg);
+  --illustration-microspot-trophy-small: url(../svg/a.svg);
+  --illustration-microspot-trophy-large: url(../svg/a.svg);
+  --illustration-microspot-location-marker-small: url(../svg/a.svg);
+  --illustration-microspot-location-marker-large: url(../svg/a.svg);
+  --illustration-microspot-salary-small: url(../svg/a.svg);
+  --illustration-microspot-salary-large: url(../svg/a.svg);
+  --illustration-microspot-pencil-ruler-small: url(../svg/a.svg);
+  --illustration-microspot-pencil-ruler-large: url(../svg/a.svg);
+  --illustration-microspot-megaphone-small: url(../svg/a.svg);
+  --illustration-microspot-megaphone-large: url(../svg/a.svg);
+  --illustration-microspot-school-small: url(../svg/a.svg);
+  --illustration-microspot-school-large: url(../svg/a.svg);
+  --illustration-microspot-video-small: url(../svg/a.svg);
+  --illustration-microspot-video-large: url(../svg/a.svg);
+  --illustration-microspot-video-course-small: url(../svg/a.svg);
+  --illustration-microspot-video-course-large: url(../svg/a.svg);
+  --illustration-microspot-dashboard-small: url(../svg/a.svg);
+  --illustration-microspot-dashboard-large: url(../svg/a.svg);
+  --illustration-microspot-briefcase-jobs-small: url(../svg/a.svg);
+  --illustration-microspot-briefcase-jobs-large: url(../svg/a.svg);
+  --illustration-microspot-mail-small: url(../svg/a.svg);
+  --illustration-microspot-mail-large: url(../svg/a.svg);
+  --illustration-microspot-mail-open-small: url(../svg/a.svg);
+  --illustration-microspot-mail-open-large: url(../svg/a.svg);
+  --illustration-microspot-article-small: url(../svg/a.svg);
+  --illustration-microspot-article-large: url(../svg/a.svg);
+  --illustration-microspot-article-stack-small: url(../svg/a.svg);
+  --illustration-microspot-article-stack-large: url(../svg/a.svg);
+  --illustration-microspot-award-small: url(../svg/a.svg);
+  --illustration-microspot-award-large: url(../svg/a.svg);
+  --illustration-microspot-calendar-small: url(../svg/a.svg);
+  --illustration-microspot-calendar-large: url(../svg/a.svg);
+  --illustration-microspot-compass-small: url(../svg/a.svg);
+  --illustration-microspot-compass-large: url(../svg/a.svg);
+  --illustration-microspot-glasses-small: url(../svg/a.svg);
+  --illustration-microspot-glasses-large: url(../svg/a.svg);
+  --illustration-microspot-gift-small: url(../svg/a.svg);
 }
