--- a/src/styles/theme-v2.css
+++ b/src/styles/theme-v2.css
@@ -1,8 +1,8 @@
 :root {
   --radius: 0.65rem;
-  --background: oklch(1 0 0);
+  --background: oklch(99.115% 0.00423 15.765);
   --foreground: oklch(0.141 0.005 285.823);
-  --card: oklch(1 0 0);
+  --card: oklch(97.572% 0.01181 16.844);
   --card-foreground: oklch(0.141 0.005 285.823);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.141 0.005 285.823);
@@ -15,7 +15,7 @@
   --accent: oklch(0.967 0.001 286.375);
   --accent-foreground: oklch(0.21 0.006 285.885);
   --destructive: oklch(0.577 0.245 27.325);
-  --border: oklch(0.92 0.004 286.32);
+  --border: oklch(94.977% 0.02516 14.351);
   --input: oklch(0.92 0.004 286.32);
   --ring: oklch(0.637 0.237 25.331);
   --chart-1: oklch(0.646 0.222 41.116);
@@ -40,7 +40,7 @@
   --card-foreground: oklch(0.985 0 0);
   --popover: oklch(0.21 0.006 285.885);
   --popover-foreground: oklch(0.985 0 0);
-  --primary: oklch(0.637 0.237 25.331);
+  --primary: oklch(57.091% 0.27433 300.741);
   --primary-foreground: oklch(0.971 0.013 17.38);
   --secondary: oklch(0.274 0.006 286.033);
   --secondary-foreground: oklch(0.985 0 0);
@@ -49,7 +49,7 @@
   --accent: oklch(0.274 0.006 286.033);
   --accent-foreground: oklch(0.985 0 0);
   --destructive: oklch(0.704 0.191 22.216);
-  --border: oklch(1 0 0 / 10%);
+  --border: oklch(57.091% 0.27433 300.741 / 20%);
   --input: oklch(1 0 0 / 15%);
   --ring: oklch(0.637 0.237 25.331);
   --chart-1: oklch(0.488 0.243 264.376);
