feat: update language switcher with URL sync and refine theme colors

--- a/src/styles/theme-v2.css
+++ b/src/styles/theme-v2.css
@@ -1,8 +1,19 @@
 :root {
+  --primary-50: lch(100% 9.15 42.94);
+  --primary-100: oklch(98.452% 0.00746 16.459);
+  --primary-200: lch(90.63% 88.06 32.34);
+  --primary-300: lch(80.63% 88.06 32.34);
+  --primary-400: lch(70.63% 88.06 32.34);
+  --primary-500: lch(60.63% 88.06 32.34);
+  --primary-600: lch(50.63% 88.06 32.34);
+  --primary-700: oklch(0.637 0.237 25.331);
+  --primary-800: lch(34.63% 88.06 32.34);
+  --primary-900: lch(14.63% 88.06 32.34);
+
   --radius: 0.65rem;
-  --background: oklch(99.115% 0.00423 15.765);
+  --background: var(--primary-50);
   --foreground: oklch(0.141 0.005 285.823);
-  --card: oklch(97.572% 0.01181 16.844);
+  --card: var(--primary-100);
   --card-foreground: oklch(0.141 0.005 285.823);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.141 0.005 285.823);
