--- a/src/styles/theme-v2.css
+++ b/src/styles/theme-v2.css
@@ -1,5 +1,6 @@
 :root {
   --primary-50: lch(100% 9.15 42.94);
+  --primary-99: oklch(99.115% 0.00423 15.765);
   --primary-100: oklch(98.452% 0.00746 16.459);
   --primary-150: lch(87.33% 6.8 33.05);
   --primary-200: lch(90.63% 88.06 32.34);
