--- a/src/styles/theme-v2.css
+++ b/src/styles/theme-v2.css
@@ -1,4 +1,5 @@
-:root {
+:root,
+.light {
   --primary-50: lch(100% 9.15 42.94);
   --primary-99: oklch(99.115% 0.00423 15.765);
   --primary-100: oklch(98.452% 0.00746 16.459);
